--- a/_config.yml
+++ b/_config.yml
@@ -52,13 +52,13 @@ social-network-links:
   email: "surajsamaga@gmail.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #   facebook: deanattali
-  github: daattali
+  github: surajsamaga
 #   twitter: daattali
 #   patreon: DeanAttali
 #   youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
- linkedin: suraj-samaga
+#  linkedin: suraj-samaga
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
