--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,13 @@ author: Suraj Samaga
 
 navbar-links:
   About Me: "aboutme"
+  Resume: "https://drive.google.com/file/d/1PKTZReveU8WCXUD34KSKVEJEro4IRNZ7/view?usp=sharing"
+  CV: "https://drive.google.com/file/d/1PKTZReveU8WCXUD34KSKVEJEro4IRNZ7/view?usp=sharing"
+  Projects: "projects"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  FPL: "https://fantasy.premierleague.com/"
+    - Course Reviews: "https://dampeeiitb.wordpress.com/course-reviews/"
+    - Grad Advice: "https://github.com/shaily99/advice"
+    - FPL: "https://fantasy.premierleague.com/"
 
 ################
 # --- Logo --- #
