--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Personal Website
+title: Suraj Samaga
 
 # Your name to show in the footer
 author: Suraj Samaga
