--- a/_config.yml
+++ b/_config.yml
@@ -161,10 +161,10 @@ footer-hover-col: "#0085A1"
 #################################
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "G-CB2EWFTM9K"
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
-google_analytics: G-CB2EWFTM9K
+google_analytics: "G-CB2EWFTM9K"
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
