--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,8 @@ author: Suraj Samaga
 navbar-links:
   About Me: "aboutme"
   CV: "https://drive.google.com/file/d/1Ig49SFQNyE0I_NZWhua9i7AIp1Q4P7s0/view?usp=sharing"
-  Projects: "projects"
+  Courses: "courses"
   Resources:
-    - Course Reviews: "https://dampeeiitb.wordpress.com/course-reviews/"
     - Grad Advice: "https://github.com/shaily99/advice"
 
 ################
