--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ social-network-links:
 #   youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
- linkedin: suraj-samaga
+#  linkedin: suraj-samaga
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
