--- a/_config.yml
+++ b/_config.yml
@@ -125,17 +125,17 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
+navbar-col: "#30D5C8"
+navbar-text-col: "#EAEAEA"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
+hover-col: "#F1A908"
+footer-col: "#30D5C8"
+footer-text-col: "#EAEAEA"
 footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-hover-col: "#F1A908"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
